CA3: Removed horizontal scroll from listview, fixed cell padding

--- a/src/main/resources/com/aszabelsk/client/view/styles.css
+++ b/src/main/resources/com/aszabelsk/client/view/styles.css
@@ -70,7 +70,7 @@
 
 .list-view.message-list .list-cell .message-box {
     -fx-background-radius: 16;
-    -fx-padding: 8;
+    -fx-padding: 8 16 8 16;
 }
 
 .list-view.message-list .list-cell .message-box.logged-in-user-message {
@@ -112,4 +112,8 @@
 
 .alert .content, .alert .button-bar .container, .alert .graphic-container {
     -fx-padding: 0;
+}
+
+.bold-label {
+    -fx-font-weight: bold;
 }
